# gazebo_domain_randomization

./: .travis.yml  LICENSE  README.md
gazebo_domain_randomization/: CMakeLists.txt  package.xml
gazebo_domain_randomizer/: CMakeLists.txt  package.xml  setup.py
gazebo_domain_randomizer/launch/: demo.launch  domain_randomizer.launch  sr_demo.launch
gazebo_domain_randomizer/nodes/: joint_properties_randomizer  light_randomizer  link_properties_randomizer  link_visual_properties_randomizer  physics_properties_randomizer  shapes_randomizer  sky_randomizer  surface_params_randomizer
gazebo_domain_randomizer/scripts/: gzclient
gazebo_domain_randomizer/src/gazebo_domain_randomizer/: utils.py
gazebo_domain_randomizer/worlds/: demo.world  empty.world
gazebo_ext_msgs/: CMakeLists.txt  package.xml
gazebo_ext_msgs/srv/: GetCollisionNames.srv  GetLinkVisualProperties.srv  GetSkyProperties.srv  GetSurfaceParams.srv  GetVisualNames.srv  SetLinkColor.srv  SetLinkVisualProperties.srv  SetSkyProperties.srv  SetSurfaceParams.srv
gazebo_physics_plugin/: CMakeLists.txt  package.xml
gazebo_physics_plugin/include/gazebo_physics_plugin/: gazebo_physics_plugin.h
gazebo_physics_plugin/src/: gazebo_physics_plugin.cpp
gazebo_ros_extension/include/gazebo_ros_extension/: gazebo_ros_extension_plugin.h
gazebo_ros_extension/src/: gazebo_ros_extension_plugin.cpp
gazebo_scene_plugin/: CMakeLists.txt  package.xml
gazebo_scene_plugin/include/gazebo_scene_plugin/: gazebo_scene_plugin.h
gazebo_scene_plugin/src/: gazebo_scene_plugin.cpp
