<?xml version="1.0"?>
<package>
  <name>gazebo_domain_randomizer</name>
  <version>0.0.1</version>
  <description>
        Gazebo domain randomization nodes.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="nekanat.stock@gmail.com">nekanat</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="nekanat.stock@gmail.com">nakenat</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ext_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ext_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
